--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,25 +11,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SpinToWIn"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".MyApplication">
         <activity
             android:name=".WithdrawActivity"
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
-            android:exported="true" />
-        <activity
-            android:name=".GuidelineActivity"
+            android:noHistory="true"
+            android:theme="@style/SplashTheme"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
+            android:name=".GuidelineActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".MainActivity"
-            android:exported="true"/>
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
