--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.razorpay:checkout:1.6.33'
+    
     implementation 'com.fxn769:stash:1.3.2'
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
