--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.razorpay:checkout:1.6.33'
+    implementation 'com.android.volley:volley:1.2.1'
     
     implementation 'com.fxn769:stash:1.3.2'
 
