--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+<uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -11,11 +11,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
+
         android:theme="@style/Theme.SpinToWIn"
         tools:targetApi="31">
-        <activity
-            android:name=".InitialScreenActivity"
-            android:exported="false" />
+        <!--        <activity-->
+        <!--            android:name=""-->
+        <!--            android:exported="false" />-->
         <activity
             android:name=".WithdrawActivity"
             android:exported="false" />
@@ -32,7 +34,7 @@
         </activity>
         <activity
             android:name=".GuidelineActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true" />
@@ -40,6 +42,17 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+<!--        <receiver-->
+<!--            android:name="com.razorpay.RzpTokenReceiver"-->
+<!--            android:exported="true" />-->
+<!--        <activity-->
+<!--            android:name="com.razorpay.CheckoutActivity"-->
+<!--            android:exported="true" />-->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/admob_app_id" />
+
     </application>
 
 </manifest>
