--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,13 @@
 pluginManagement {
     repositories {
         google()
-        mavenCentral()
         gradlePluginPortal()
         maven { url 'https://jitpack.io'}
         jcenter()
+        mavenCentral()
+        maven { url "https://artifact.bytedance.com/repository/pangle" }
+        maven { url "https://android-sdk.is.com" }
+        maven { url "https://dl-maven-android.mintegral.com/repository/mbridge_android_sdk_oversea" }
     }
 }
 dependencyResolutionManagement {
@@ -14,8 +17,14 @@ dependencyResolutionManagement {
         mavenCentral()
         maven { url 'https://jitpack.io'}
         jcenter()
+        maven { url "https://artifact.bytedance.com/repository/pangle" }
+        maven { url "https://android-sdk.is.com" }
+        maven { url "https://dl-maven-android.mintegral.com/repository/mbridge_android_sdk_oversea" }
     }
+    
+
 }
+
 
 rootProject.name = "SpinToWIn"
 include ':app'
